refactor(logic): move util logic to separate package. simplify cli/lib functioning
Refactored some code for readability and efficiency. Removed all the repetitive code checks for cli-mode and instead it now uses an Output class.

StreakUtils class in case more save file thing-a-ma-jigs happens.